# template-app-react-fastApi-pg

./: README.md  docker-compose.yml
backend/: .gitignore  dockerfile  main.py  pyproject.toml
frontend/: dockerfile  package-lock.json  package.json
